# Trochilidae

./: Cargo.toml
assets/shaders/: plant.wgsl  water.wgsl
assets/shaders/vascular/: fragment.wgsl  vertex.wgsl  vertex_output.wgsl
crates/biosphere/: Cargo.toml
crates/biosphere/examples/: biosphere.rs
crates/biosphere/src/: cache.rs  creatures.rs  instance.rs  lib.rs  plugin.rs
crates/biosphere/src/biosphere/: biosphere.rs  mod.rs  registry.rs
crates/biosphere/src/environment/: cond.rs  mod.rs  op.rs  val.rs  var.rs
crates/biosphere/src/phenotype/: anatomy.rs  habitability.rs  id.rs  mod.rs
crates/biosphere/src/systems/: genesis.rs  mod.rs  spawn_biosphere.rs  update_visible_instances.rs
crates/blueprint/: Cargo.toml
crates/blueprint/src/: blueprint.rs  default.rs  error.rs  lib.rs  registry.rs
crates/blueprint/src/graph/: graph_edge.rs  graph_node.rs  mod.rs  node.rs
crates/blueprint/src/nodes/: cell.rs  color_ramp.rs  coord.rs  math.rs  mod.rs  noise.rs
crates/blueprint/src/value/: from_value.rs  graph_value.rs  into_value.rs  mod.rs  value.rs  value_type.rs
crates/lsystems/: Cargo.toml
crates/lsystems/src/: alphabet.rs  context.rs  lib.rs  module.rs  operator.rs  value.rs
crates/lsystems/src/lsystem/: axiom.rs  builder.rs  lsystem.rs  mod.rs  state.rs
crates/lsystems/src/rules/: condition.rs  conditional.rs  mod.rs  rule.rs  rules.rs
crates/lsystems/tests/: algea.rs  binary_tree.rs  contextual.rs  koch_curve.rs  parameteric.rs  stochastic.rs
crates/plants/: Cargo.toml
crates/plants/examples/: leaves.rs  plant.rs  trees.rs  vascular.rs
crates/plants/examples/utils/: mod.rs  ui.rs  wireframe.rs
crates/plants/src/: builder.rs  bundle.rs  lib.rs  parser.rs  plugin.rs  token.rs
crates/plants/src/builder/: builder.rs  mod.rs  parser.rs  token.rs
crates/plants/src/leaves/: cordate.rs  mod.rs  rose_leaf.rs  simple.rs
crates/plants/src/leaves/mesh/: config.rs  mod.rs  renderer.rs
crates/plants/src/lsystem/: mod.rs  parser.rs  token.rs
crates/plants/src/material/: material.rs  mod.rs
crates/plants/src/mesh/: config.rs  data.rs  mod.rs  renderer.rs  state.rs
crates/plants/src/plants/: mod.rs  monopodial.rs  sympodial.rs
crates/plants/src/render/: fragment_shader.wgsl  prepass_shader.wgsl  vertex_shader.wgsl
crates/plants/src/trees/: mod.rs  monopodial.rs  sympodial.rs
crates/plants/src/trees/mesh/: renderer.rs  state.rs
crates/plants/src/trees/render/: buffer.rs  data.rs  draw.rs  mod.rs  pipeline.rs  plugin.rs
crates/plants/src/trees/render/systems/: prepare_instance_buffers.rs  prepare_instance_index.rs  queue_vascular.rs
crates/plants/src/vascular/: mod.rs  monopodial.rs  sympodial.rs
crates/plants/src/vascular/builder/: token.rs
crates/plants/src/vascular/mesh/: data.rs  renderer.rs
crates/plants/src/vascular/render/: data.rs  mod.rs  pipeline.rs  plugin.rs
crates/plants/src/vascular/render/systems/: mod.rs  prepare_instance_buffers.rs  prepare_instance_index.rs  queue_vascular.rs
crates/world/: Cargo.toml
crates/world/examples/: water_material.rs  world.rs
crates/world/src/: descriptor.rs  entities.rs  lib.rs  map.rs  plugin.rs  settings.rs  utils.rs
crates/world/src/bundles/: canvas.rs  cell.rs  chunk.rs  hex_world.rs  mod.rs  observer.rs  viewport.rs
crates/world/src/components/: canvas.rs  cell.rs  chunk.rs  color.rs  elevation.rs  hex_world.rs  mesh_handle.rs  mod.rs  moisture.rs  moisture_handle.rs  observer.rs  stage.rs  terrain_handle.rs  water_handle.rs  water_table.rs
crates/world/src/compose/: blueprint.rs  compose_cell.rs  composer.rs  default.rs  mod.rs  random.rs
crates/world/src/core/: cache.rs  components.rs  entities.rs  mod.rs  observer.rs  origin.rs  plugin.rs  settings.rs  utils.rs
crates/world/src/core/bundles/: canvas.rs  cell.rs  chunk.rs  hex_world.rs  mod.rs  viewport.rs
crates/world/src/core/compose/: blueprint.rs  compose_cell.rs  default.rs  mod.rs  random.rs
crates/world/src/core/debug/: mod.rs  plugin.rs
crates/world/src/core/debug/systems/: mod.rs  spawn.rs  update_observer.rs  update_time.rs
crates/world/src/core/systems/: mod.rs  spawn_simulation.rs  update_viewport.rs
crates/world/src/debug/: mod.rs  plugin.rs
crates/world/src/debug/systems/: mod.rs  spawn.rs  update_observer.rs  update_time.rs
crates/world/src/mesh/: descriptor.rs  mesh_builder.rs  mod.rs  query_data.rs  terrain_builder.rs
crates/world/src/moisture/: bundle.rs  mod.rs  plugin.rs
crates/world/src/moisture/components/: handle.rs  mod.rs  moisture.rs
crates/world/src/moisture/systems/: check_moisture_tasks.rs  mod.rs  spawn_material.rs  spawn_moisture.rs
crates/world/src/observer/: bundle.rs  component.rs  mod.rs  origin.rs  plugin.rs
crates/world/src/observer/systems/: keyboard.rs  mod.rs  spawn.rs  update.rs
crates/world/src/sky/: bundle.rs  mod.rs  plugin.rs  sun.rs  timer.rs
crates/world/src/sky/systems/: cycle.rs  mod.rs  spawn.rs
crates/world/src/systems/: check_mesh_tasks.rs  check_moisture_tasks.rs  check_terrain_tasks.rs  check_water_tasks.rs  mod.rs  spawn_chunk.rs  spawn_chunk_material.rs  spawn_materials.rs  spawn_observer.rs  spawn_simulation_world.rs  spawn_viewport_assembly.rs  spawn_world.rs  update_map.rs  update_mesh_tasks.rs  update_observer.rs
crates/world/src/terrain/: mod.rs  plugin.rs
crates/world/src/terrain/components/: cell.rs  chunk.rs  color.rs  elevation.rs  handle.rs  mod.rs
crates/world/src/terrain/systems/: check_terrain_tasks.rs  mod.rs  spawn_material.rs  spawn_terrain.rs
crates/world/src/time/: mod.rs  plugin.rs  settings.rs
crates/world/src/water/: bundle.rs  material.rs  mod.rs  plugin.rs
crates/world/src/water/components/: handle.rs  mod.rs  table.rs
crates/world/src/water/systems/: check_water_tasks.rs  mod.rs  spawn_material.rs  spawn_water.rs
