[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Patrick Greene <wendivoid@gmail.com>"]

[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
bevy = "0.13.2"
bevy_ui = "0.13.2"
bevy_ecs = "0.13.2"
bevy_app = "0.13.2"
bevy_log = "0.13.2"
bevy_pbr = "0.13.2"
bevy_ptr = "0.13.2"
bevy_a11y = "0.13.2"
bevy_math = "0.13.2"
bevy_text = "0.13.2"
bevy_time = "0.13.2"
bevy_core = "0.13.2"
bevy_gltf = "0.13.2"
bevy_winit = "0.13.2"
bevy_tasks = "0.13.2"
bevy_scene = "0.13.2"
bevy_audio = "0.13.2"
bevy_utils = "0.13.2"
bevy_input = "0.13.2"
bevy_gilrs = "0.13.2"
bevy_gizmos = "0.13.2"
bevy_window = "0.13.2"
bevy_reflect = "0.13.2"
bevy_render = "0.13.2"
bevy_sprite = "0.13.2"
bevy_diagnostic = "0.13.2"
bevy_animation = "0.13.2"
bevy_transform = "0.13.2"
bevy_hierarchy = "0.13.2"

rand = "0.8.5"
bevy_infinite_grid = "0.12.0"
bevy_panorbit_camera = "0.18.2"

plants = { path = "crates/plants" }
lsystems = { path = "crates/lsystems" }
