[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Patrick Greene <wendivoid@gmail.com>"]

[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
bevy = "0.14.0"
bevy_ui = "0.14.0"
bevy_ecs = "0.14.0"
bevy_app = "0.14.0"
bevy_log = "0.14.0"
bevy_pbr = "0.14.0"
bevy_ptr = "0.14.0"
bevy_a11y = "0.14.0"
bevy_math = "0.14.0"
bevy_text = "0.14.0"
bevy_time = "0.14.0"
bevy_core = "0.14.0"
bevy_gltf = "0.14.0"
bevy_color = "0.14.0"
bevy_winit = "0.14.0"
bevy_tasks = "0.14.0"
bevy_scene = "0.14.0"
bevy_audio = "0.14.0"
bevy_utils = "0.14.0"
bevy_input = "0.14.0"
bevy_gilrs = "0.14.0"
bevy_asset = "0.14.0"
bevy_gizmos = "0.14.0"
bevy_window = "0.14.0"
bevy_reflect = "0.14.0"
bevy_render = "0.14.0"
bevy_sprite = "0.14.0"
bevy_diagnostic = "0.14.0"
bevy_animation = "0.14.0"
bevy_transform = "0.14.0"
bevy_hierarchy = "0.14.0"

rand = "0.8.5"
bevy_panorbit_camera = "0.19.0"

plants = { path = "crates/plants" }
lsystems = { path = "crates/lsystems" }
