[package]
name = "biosphere"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_pbr.workspace = true
bevy_core.workspace = true
bevy_math.workspace = true
bevy_utils.workspace = true
bevy_state.workspace = true
bevy_asset.workspace = true
bevy_render.workspace = true
bevy_hierarchy.workspace = true

rand.workspace = true
hexx.workspace = true
uuid.workspace = true
petgraph.workspace = true
derive_more.workspace = true

plants.workspace = true
world.workspace = true
lsystems.workspace = true

[dev-dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true