[package]
name = "plants"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chumsky = "0.9.3"
lsystems.workspace = true
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_pbr.workspace = true
bevy_math.workspace = true
bevy_utils.workspace = true
bevy_asset.workspace = true
bevy_reflect.workspace = true
bevy_render.workspace = true
bevy_transform.workspace = true

[dev-dependencies]
bevy.workspace = true
bevy_panorbit_camera.workspace = true
sickle_ui = { rev = "5a8143f", git = "https://github.com/UmbraLuminosa/sickle_ui" }