[package]
name = "plants"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
earcut = "0.4.1"
chumsky = "0.9.3"
lsystems.workspace = true
bevy_pbr.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_math.workspace = true
bevy_asset.workspace = true
bevy_utils.workspace = true
bevy_color.workspace = true
bevy_render.workspace = true
bevy_reflect.workspace = true
bevy_transform.workspace = true
bevy_core_pipeline.workspace = true

world.workspace = true
hexx.workspace = true
bytemuck.workspace = true
derive_more.workspace = true

[dev-dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy_panorbit_camera.workspace = true