[package]
name = "world"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
hexx.workspace = true
bevy_ui.workspace = true
bevy_app.workspace = true
bevy_pbr.workspace = true
bevy_ecs.workspace = true
bevy_text.workspace = true
bevy_core.workspace = true
bevy_math.workspace = true
bevy_time.workspace = true
bevy_tasks.workspace = true
bevy_color.workspace = true
bevy_utils.workspace = true
bevy_asset.workspace = true
bevy_gizmos.workspace = true
bevy_render.workspace = true
bevy_hierarchy.workspace = true
bevy_transform.workspace = true
bevy_core_pipeline.workspace = true

blueprint.workspace = true

rand.workspace = true
itertools.workspace = true
bevy_easings = "0.14.0"
bevy_panorbit_camera.workspace = true

[dev-dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true